--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
     <string name="tab_text_1">Schedule</string>
     <string name="tab_text_2">Chat</string>
-    <!-- TODO: Remove or change this placeholder text -->
-
-    <!-- Preference Titles -->
-
-    <!-- Messages Preferences -->
-
-    <!-- Sync Preferences -->
     <string name="settings">Settings</string>
+
+    <string-array name="fragments">
+        <item>Fragment Monday</item>
+        <item>Fragment Tuesday</item>
+    </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
